fix and others
