# internal/controllers/orders_controller.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"fmt"
 	"net/http"
 	"strconv"
 
@@ -17,39 +18,38 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        request body   types.CreateOrderDTO  true  "Formulario Orden"
-// @Router       /hornero/loged/orders/order [post]
+// @Router       /hornero/authed/orders/order [post]
 func CreateOrderHandler(c echo.Context) error {
 	var dto types.CreateOrderDTO
 	if err := c.Bind(&dto); err != nil {
-		return c.JSON(http.StatusBadRequest, "Invalid Json")
+		return c.JSON(http.StatusBadRequest, types.Error{Error: "Invalid Json"})
 	}
 
 	// Validaciones básicas manuales si querés
-	if dto.ClientName == "" || dto.TotalPieces <= 0 {
-		return c.JSON(http.StatusBadRequest, "Insufficient fields")
+	if dto.ClientName == "" || dto.TotalPieces <= 0 || dto.ID == nil {
+		return c.JSON(http.StatusBadRequest, types.Error{Error: "Insufficient fields"})
 	}
 
 	if err := services.CreateOrderUseCase(dto); err != nil {
-		return c.JSON(http.StatusBadRequest, err.Error())
+		return c.JSON(http.StatusBadRequest, types.Error{Error: err.Error()})
 	}
-
-	return c.JSON(http.StatusCreated, "Succefully Order Created")
+	return c.JSON(http.StatusCreated, types.Response{Message: fmt.Sprintf("The Order %d has been created", *dto.ID)})
 }
 
 // GetOrdersHandler godoc
 // @Summary      Listar Órdenes Activas
 // @Tags         Orders
 // @Produce      json
-// @Router       /hornero/loged/orders/list [get]
+// @Router       /hornero/authed/orders/list [get]
 func GetOrdersHandler(c echo.Context) error {
 	var filter types.OrderFilter
 
 	if err := c.Bind(&filter); err != nil {
-		return c.JSON(http.StatusBadRequest, "Filters don't work")
+		return c.JSON(http.StatusBadRequest, types.Error{Error: "Filters don't work"})
 	}
 	orders, err := services.GetAllOrdersUseCase(filter)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, err.Error())
+		return c.JSON(http.StatusBadRequest, types.Error{Error: err.Error()})
 	}
 	return c.JSON(http.StatusOK, orders)
 }
@@ -60,23 +60,23 @@ func GetOrdersHandler(c echo.Context) error {
 // @Tags         Orders
 // @Param        id      path    int                   true  "ID de la Orden"
 // @Param        request body    types.UpdateOrderDTO  true  "Datos Nuevos"
-// @Router      /hornero/loged/orders/updord/{id} [put]
+// @Router      /hornero/authed/orders/updord/{id} [put]
 func UpdateOrderHandler(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, "ID param invalid")
+		return c.JSON(http.StatusBadRequest, types.Error{Error: "ID param invalid"})
 	}
 
 	var dto types.UpdateOrderDTO
 	if err := c.Bind(&dto); err != nil {
-		return c.JSON(http.StatusBadRequest, "Invalid Json")
+		return c.JSON(http.StatusBadRequest, types.Error{Error: "Invalid Json"})
 	}
 
 	if err := services.UpdateOrderUseCase(id, dto); err != nil {
-		return c.JSON(http.StatusInternalServerError, err.Error())
+		return c.JSON(http.StatusBadRequest, types.Error{Error: err.Error()})
 	}
 
-	return c.JSON(http.StatusOK, "successfully Updated")
+	return c.JSON(http.StatusCreated, types.Response{Message: fmt.Sprintf("The Order %d has been updated", id)})
 }
 
 // GetDashboardHandler godoc
@@ -84,14 +84,14 @@ func UpdateOrderHandler(c echo.Context) error {
 // @Description  Muestra métricas y órdenes. Si es admin ve revenue, si no, ve $0.
 // @Security     BearerAuth
 // @Tags         Production
-// @Router       /hornero/loged/orders/dashboard [get]
+// @Router       /hornero/authed/orders/dashboard [get]
 func GetPrincipalDashboardHandler(c echo.Context) error {
 	userToken := c.Get("user").(*jwt.Token)
 	claims := userToken.Claims.(*auth.JwtCustomClaims)
 
 	data, err := services.GetDashboardDataUseCase(claims.Role)
 	if err != nil {
-		return c.JSON(http.StatusInternalServerError, err.Error())
+		return c.JSON(http.StatusBadRequest, types.Error{Error: err.Error()})
 	}
 
 	return c.JSON(http.StatusOK, data)
